@@ -1,3 +1,8 @@
+2006-01-09  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Added missing files.
+	* en_CA.po: Updated Canadian English translation.
+
 2006-01-09  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
